Fix Dark mode and Icons

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,7 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
-
+body {
+  padding-top: 4rem;
+}
 .hamburg {
   display: none;
 }
